[package]
name = "bmi-wsproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "8Mi-WSProxy"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "0.21"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.0", features = ["derive"] }
anyhow = "1.0.81"
byteorder = "1.5.0"
chrono = "0.4.35"
futures-util = "0.3.30"
log = "0.4.21"  # 注意：虽然代码中有log模块，但这里指的是日志库
env_logger = "0.10.1"  # 可选，用于日志输出
serde = { version = "1.0.196", features = ["derive"] }  # warp查询参数解析需要
serde_json = "1.0.113"  # 可选，JSON处理

[workspace]
members = [
    "xtask",
]